syntax = "proto3";

package abi;

message LoginRequest {
    string username = 1;
    string password = 2;
}

message Token {
    string data = 1;
}

message newChatMessage {
    string room = 1;
    string content = 2;
}

//empty send message response
message SendMessageResponse {

}

//empty
message GetMessageRequest{

}


message ChatMessage{
    string sender = 1;
    string room = 2;
    string content = 3;
    int64 timestamp = 4;
}

service Chat {
    rpc Login(LoginRequest) returns (Token) {}

    rpc SendMessage(newChatMessage) returns (SendMessageResponse) {}

    rpc GetMessage(GetMessageRequest) returns (stream ChatMessage) {}
}
